# drf-template

./: .gitignore  example.env  pyproject.toml
apps/common/models/: delete.py
apps/common/serializers/: __init__.py
apps/common/swagger/: generator.py
apps/common/utils/: generator.py  image.py  month_number.py  number_to_words.py  timing.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: users.py
core/: settings.py  swagger.py  urls.py
project_name/: settings.py  swagger.py  urls.py
